Update bindings to wgpu-native 0.12.0.1

--- a/BindingsGenerator/BindingsGenerator.csproj
+++ b/BindingsGenerator/BindingsGenerator.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="headers\webgpu-headers\webgpu.h">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="headers\webgpu.h">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
