add Wrappers for all Impl types and extend Test
to use more WGPU features (vertexBuffers and uniforms)
also make it more appealing and interesting

--- a/WGPU.NET/WGPU.NET.csproj
+++ b/WGPU.NET/WGPU.NET.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="shader.wgsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
