--- a/WGPU.Tests/WGPU.Tests.csproj
+++ b/WGPU.Tests/WGPU.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+	  <LangVersion>10.0</LangVersion>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
